[gd_scene load_steps=15 format=2]

[ext_resource path="res://Level2res/Mundo2.gd" type="Script" id=1]
[ext_resource path="res://sprites/backgrounds/simple_daytime.png" type="Texture" id=2]
[ext_resource path="res://cannon_cart.tscn" type="PackedScene" id=3]
[ext_resource path="res://pipe.tscn" type="PackedScene" id=4]
[ext_resource path="res://floor.tscn" type="PackedScene" id=5]
[ext_resource path="res://level_cleared_window.tscn" type="PackedScene" id=6]
[ext_resource path="res://reset_exit_window.tscn" type="PackedScene" id=7]
[ext_resource path="res://Level2res/trash_trays.gd" type="Script" id=8]
[ext_resource path="res://sprites/wood/h_wood_plank_2.png" type="Texture" id=9]
[ext_resource path="res://sprites/speech_bubble/speech_bubble.png" type="Texture" id=10]
[ext_resource path="res://Level2res/speech_bubble.gd" type="Script" id=11]
[ext_resource path="res://fonts/montserrat_24.tres" type="DynamicFont" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 234.363, 33.3328 )

[sub_resource type="RectangleShape2D" id=2]

[node name="World2" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
z_index = -2
texture = ExtResource( 2 )

[node name="cannon_cart" parent="." instance=ExtResource( 3 )]

[node name="pipe" parent="." instance=ExtResource( 4 )]

[node name="floor" parent="." instance=ExtResource( 5 )]

[node name="level_cleared_window" parent="." instance=ExtResource( 6 )]
pause_mode = 2
visible = false

[node name="reset_exit_window" parent="." instance=ExtResource( 7 )]
pause_mode = 2
visible = false
margin_left = 534.53
margin_top = 306.49
margin_right = 534.53
margin_bottom = 306.49

[node name="trash_trays" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( -119.32, -97.39 )
script = ExtResource( 8 )

[node name="tray_1" type="StaticBody2D" parent="trash_trays"]
position = Vector2( 1221.43, 578.713 )
scale = Vector2( 0.356182, 0.57882 )
__meta__ = {
"_edit_group_": true
}

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_1"]
texture = ExtResource( 9 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_1"]
shape = SubResource( 1 )

[node name="trash_area1" type="Area2D" parent="trash_trays/tray_1"]

[node name="trash_area_shape" type="CollisionShape2D" parent="trash_trays/tray_1/trash_area1"]
position = Vector2( 0, -64.76 )
scale = Vector2( 22.53, 3.13 )
shape = SubResource( 2 )

[node name="tray_2" type="StaticBody2D" parent="trash_trays"]
position = Vector2( 1221.43, 461.883 )
scale = Vector2( 0.356182, 0.57882 )
__meta__ = {
"_edit_group_": true
}

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_2"]
texture = ExtResource( 9 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_2"]
shape = SubResource( 1 )

[node name="trash_area2" type="Area2D" parent="trash_trays/tray_2"]

[node name="trash_area_shape" type="CollisionShape2D" parent="trash_trays/tray_2/trash_area2"]
position = Vector2( 0, -64.76 )
scale = Vector2( 22.53, 3.13 )
shape = SubResource( 2 )

[node name="tray_3" type="StaticBody2D" parent="trash_trays"]
position = Vector2( 1221.43, 339.493 )
scale = Vector2( 0.356182, 0.57882 )
__meta__ = {
"_edit_group_": true
}

[node name="tray_sprite" type="Sprite" parent="trash_trays/tray_3"]
texture = ExtResource( 9 )

[node name="tray_shape" type="CollisionShape2D" parent="trash_trays/tray_3"]
shape = SubResource( 1 )

[node name="trash_area3" type="Area2D" parent="trash_trays/tray_3"]

[node name="trash_area_shape" type="CollisionShape2D" parent="trash_trays/tray_3/trash_area3"]
position = Vector2( 0, -64.76 )
scale = Vector2( 22.53, 3.13 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="trash_trays"]
wait_time = 3.0
one_shot = true

[node name="speech_bubble" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 748.23, 195.3 )
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Label" type="Label" parent="speech_bubble"]
margin_left = -237.26
margin_top = -89.9
margin_right = 459.74
margin_bottom = -58.9
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Objetivo: Coloca solo 1 pieza de
 basura en cada repisa."

[node name="Timer" type="Timer" parent="speech_bubble"]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="body_entered" from="trash_trays/tray_1/trash_area1" to="trash_trays" method="_on_trash_area1_body_entered"]
[connection signal="body_exited" from="trash_trays/tray_1/trash_area1" to="trash_trays" method="_on_trash_area1_body_exited"]
[connection signal="body_entered" from="trash_trays/tray_2/trash_area2" to="trash_trays" method="_on_trash_area2_body_entered"]
[connection signal="body_exited" from="trash_trays/tray_2/trash_area2" to="trash_trays" method="_on_trash_area2_body_exited"]
[connection signal="body_entered" from="trash_trays/tray_3/trash_area3" to="trash_trays" method="_on_trash_area3_body_entered"]
[connection signal="body_exited" from="trash_trays/tray_3/trash_area3" to="trash_trays" method="_on_trash_area3_body_exited"]
[connection signal="timeout" from="trash_trays/Timer" to="trash_trays" method="_on_Timer_timeout"]
[connection signal="timeout" from="speech_bubble/Timer" to="speech_bubble" method="_on_Timer_timeout"]
